--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <header class="header">
-  <h1 class="header--title">Angular App</h1>
+  <h1 class="header--title">Angular Sensor App</h1>
 </header>
