--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel>
+<mat-expansion-panel class="filter-panel">
   <mat-expansion-panel-header>
     Filter sensors
   </mat-expansion-panel-header>
