--- a/src/app/card-view/card/card.component.html
+++ b/src/app/card-view/card/card.component.html
@@ -5,7 +5,10 @@
     <p> @{{ sensor.lastUpdate | getHhMm }}</p>
   </mat-card-content>
   <div class="holder">
-    <img mat-card-image class="sensor-image" [src]="'assets/' + sensor.image" [alt]="sensor.name">
+    <img
+      class="sensor-image"
+      [src]="'assets/' + sensor.image"
+      [alt]="sensor.name">
     <div class="parameter-values" *ngIf="sensor.value" >
       <p class="unit">{{ sensor.value }}</p>
       <p class="unit">{{ sensor.unitSymbol }}</p>
