--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -18,3 +18,7 @@
       </mat-form-field>
   </form>
 </mat-expansion-panel>
+
+<div *ngIf="isLoading">
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
