--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,12 @@
-<header class="header">
-  <h1 class="header--title">Angular Sensor App</h1>
+<header
+  fxLayout="column"
+  fxLayout.gt-xs="row"
+  fxLayoutAlign="space-between center"
+  class="header">
+    <h1 class="header--title">Sensor App</h1>
+    <button
+      mat-stroked-button
+      color="accent"
+      routerLink="/add-card"
+      routerLinkActive="active">Add sensor</button>
 </header>
