--- a/src/app/add-card/add-card.component.scss
+++ b/src/app/add-card/add-card.component.scss
@@ -1,4 +1,30 @@
 .form-holder {
-  width: 60%;
-  margin: 2rem auto;
+    width: 90%;
+    margin: 2rem auto;
+
+    mat-form-field {
+        display: block;
+    }
+
+    .save-button-holder {
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .form-holder {
+        width: 60%;
+    }
+}
+
+@media screen and (min-width: 750px) {
+    .form {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+
+        .form-fields {
+            width: 45%;
+        }
+    }
 }
