--- a/src/app/add-card/add-card.component.html
+++ b/src/app/add-card/add-card.component.html
@@ -1,65 +1,5 @@
-<mat-card class="form-holder">
-    <h2>Add new sensor</h2>
-
-    <form [formGroup]="addSensorForm" class="form">
-        <div class="form-fields">
-            <mat-form-field>
-                <input matInput formControlName="name" placeholder="Name" />
-            </mat-form-field>
-
-            <mat-form-field>
-                <input matInput formControlName="path" placeholder="Path" />
-            </mat-form-field>
-
-            <mat-form-field>
-                <mat-label>Sensor type</mat-label>
-                <mat-select formControlName="type">
-                    <mat-option *ngFor="let type of sensorTypes" [value]="type">
-                        {{ type }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-
-        <div class="form-fields">
-            <mat-form-field>
-                <input
-                    matInput
-                    formControlName="unitSymbol"
-                    placeholder="Unit Symbol"
-                />
-            </mat-form-field>
-
-            <mat-form-field>
-                <input matInput formControlName="value" placeholder="Value" />
-            </mat-form-field>
-
-            <mat-form-field>
-                <mat-label>Sensor image</mat-label>
-                <mat-select formControlName="image">
-                    <mat-option
-                        *ngFor="let image of sensorImages"
-                        [value]="image.imagePath"
-                    >
-                        {{ image.viewValue }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-    </form>
-
-    <div
-        fxLayout="row"
-        fxLayoutAlign="center center"
-        class="save-button-holder"
-    >
-        <button
-            mat-raised-button
-            [disabled]="!addSensorForm.valid"
-            (click)="onSubmit()"
-            color="accent"
-        >
-            Save new Sensor
-        </button>
-    </div>
-</mat-card>
+<app-card-form
+    [title]="headerTitle"
+    [buttonTitle]="buttonTitle"
+    (formValue)="onSubmit($event)"
+></app-card-form>
