--- a/src/app/card-view/card/card.component.html
+++ b/src/app/card-view/card/card.component.html
@@ -1,17 +1,25 @@
-<mat-card>
-  <mat-card-title>{{ sensor.name }}</mat-card-title>
-  <mat-card-content>
-    <p>{{ sensor.path }}</p>
-    <p> @{{ sensor.lastUpdate | getHhMm }}</p>
-  </mat-card-content>
-  <div class="holder">
-    <img
-      class="sensor-image"
-      [src]="'assets/' + sensor.image"
-      [alt]="sensor.name">
-    <div class="parameter-values" *ngIf="sensor.value" >
-      <p class="unit">{{ sensor.value }}</p>
-      <p class="unit">{{ sensor.unitSymbol }}</p>
+<mat-card class="card-sensor">
+    <mat-card-title class="card-title">
+        <h3>
+            {{ sensor.name }}
+        </h3>
+        <button mat-raised-button color="primary">Delete</button>
+    </mat-card-title>
+
+    <mat-card-content>
+        <p>{{ sensor.path }}</p>
+        <p>@{{ sensor.lastUpdate | getHhMm }}</p>
+    </mat-card-content>
+
+    <div class="holder">
+        <img
+            class="sensor-image"
+            [src]="'assets/' + sensor.image"
+            [alt]="sensor.name"
+        />
+        <div class="parameter-values" *ngIf="sensor.value">
+            <p class="unit">{{ sensor.value }}</p>
+            <p class="unit">{{ sensor.unitSymbol }}</p>
+        </div>
     </div>
-  </div>
 </mat-card>
