--- a/src/app/card-view/card-view.component.scss
+++ b/src/app/card-view/card-view.component.scss
@@ -1,9 +1,25 @@
 .card-holder {
     width: 90%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .error-message {
     margin-top: 3rem;
     text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+    .card-holder {
+        width: 80%;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .card-holder {
+        flex-direction: row;
+        justify-content: stretch;
+    }
 }
