--- a/src/app/card-view/card-view.component.scss
+++ b/src/app/card-view/card-view.component.scss
@@ -20,6 +20,6 @@
 @media screen and (min-width: 900px) {
     .card-holder {
         flex-direction: row;
-        justify-content: stretch;
+        justify-content: center;
     }
 }
