--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,23 +4,19 @@
     fxLayoutAlign="space-between center"
     class="header"
 >
-    <h1 class="header--title" routerLink="/card-view">Sensor App</h1>
-    <div>
-        <button
-            mat-stroked-button
-            color="accent"
-            routerLink="/add-card"
-            routerLinkActive="active"
-        >
+    <h1 class="header--title">Sensor App</h1>
+    <nav class="nav-bar">
+        <button mat-button routerLink="/card-view" routerLinkActive="active">
+            Card view
+        </button>
+        <button mat-button routerLink="/gid-view" routerLinkActive="active">
+            Gird view
+        </button>
+        <button mat-button routerLink="/add-card" routerLinkActive="active">
             Add sensor
         </button>
-        <button
-            mat-stroked-button
-            color="accent"
-            routerLink="/edit-card"
-            routerLinkActive="active"
-        >
+        <button mat-button routerLink="/edit-card" routerLinkActive="active">
             Edit sensor
         </button>
-    </div>
+    </nav>
 </header>
