--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -8,8 +8,23 @@
         cursor: pointer;
     }
 
+    .nav-bar {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
     .active {
         background: blue;
         color: white;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .header {
+        .nav-bar {
+            flex-direction: row;
+            width: initial;
+        }
     }
 }
