--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,8 @@
 >
     <h1 class="header--title">Sensor App</h1>
     <nav class="nav-bar">
-        <button mat-button routerLink="/card-view" routerLinkActive="active">
-            Card view
-        </button>
-        <button mat-button routerLink="/gid-view" routerLinkActive="active">
-            Gird view
+        <button mat-button routerLink="/home" routerLinkActive="active">
+            Home
         </button>
         <button mat-button routerLink="/add-card" routerLinkActive="active">
             Add sensor
