--- a/src/app/home/grid-view/grid-view.component.html
+++ b/src/app/home/grid-view/grid-view.component.html
@@ -1,1 +1,50 @@
-<p>grid-view works!</p>
+<mat-card class="grid-view">
+    <table mat-table [dataSource]="dataSource" matSort class="table">
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="value">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Value</th>
+            <td mat-cell *matCellDef="let element">{{ element.value }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="lastUpdate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                Last Update
+            </th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.lastUpdate | date }}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                Action
+            </th>
+            <td mat-cell *matCellDef="let element">
+                <img
+                    title="Edit sensor"
+                    src="assets/images/edit-icon.svg"
+                    alt="edit"
+                    class="action-icon"
+                />
+                <img
+                    title="Delete sensor"
+                    src="assets/images/delete-icon.svg"
+                    alt="delete"
+                    class="action-icon"
+                />
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+    </table>
+</mat-card>
