--- a/src/app/home/grid-view/grid-view.component.scss
+++ b/src/app/home/grid-view/grid-view.component.scss
@@ -1,6 +1,7 @@
 .grid-view {
     width: 90%;
     margin: 0 auto;
+
     .table {
         width: 100%;
 
@@ -8,6 +9,18 @@
             width: 1rem;
             margin-right: 5px;
             cursor: pointer;
+        }
+    }
+}
+
+.edit-sensor-dialog {
+    mat-dialog-container {
+        padding: 0;
+
+        mat-card.form-holder {
+            width: 100%;
+            margin: 0;
+            padding: 20px;
         }
     }
 }
